Refactor: Applied recruiter feedback — modernized code to Java 21 and Spring Boot 3.5 best practices, restructured all classes, improved HTTP client usage, enhanced integration test, added README and license